# pybud-gui

./: .gitignore  Cargo.toml  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: python-publish.yml
examples/: advanced-example1.py  advanced-example2.py  build-your-first-dialog.py  build-your-first-dialoge.py  colored-text-in-dialogs.py  example1.py  example2.py
pybud/pybud/: __init__.py
pybud/pybud/drawer/: __init__.py  __init__.pyi  ansi.py  ansi.pyi  color.py  color.pyi
pybud/pybud/gui/: dialog.py  widgets.py
rust/: lib.rs  main.rs
rust/ansi/: char.rs  drawer.rs  mod.rs  string.rs
src/: example1.py  example2.py
src/pybud/: ansi.py  deftypes.py  drawer.py
src/pybud/gui/: dialog.py  widgets.py
